--- a/account-ms/src/main/resources/application.yml
+++ b/account-ms/src/main/resources/application.yml
@@ -2,15 +2,12 @@ server:
   port: 9090
   servlet:
     context-path: /bank/v1
-spring:
-  security:
-    user:
-      name : "admin"
-      password : "admin"
+  session:
+    timeout: 300
   profiles:
     active: "dev"
 config:
     data:
-      url: "jdbc:ucanaccess:///home/code/99brightminds/bank-java-service/account-ms/src/main/resources/accountsdb.accdb"
+      url: "jdbc:ucanaccess://C:/Users/lalsaadi/work/code/bank-java-service/account-ms/src/main/resources/accountsdb.accdb"
       driver-class-name: "net.ucanaccess.jdbc.UcanaccessDriver"
 
